Tue Nov 27 00:42:05 2001  George Lebl <jirka@5z.com>

	* Makefile.am, menu-rh.[ch], distribution.[ch]: whack the redhat
	  menu stuff.  Note this was the OLD redhat menu stuff which was
	  just plain crack.  Though this reduces the overall ugliness
	  quotient of the menu*.c files by quite a bit, but I'll live.

	* panel-utils.[ch], quick-desktop-reader.c, menu.c,
	  menu-properties.c, launcher.c: Make pixmap finding work better
	  also find kde icons from kde2 properly (well ... properly ...
	  somewhat properly).  Load last mapped first for fakes.  Fix
	  the gtk_menu_reposition hack to be shorter but just as evil.

2001-11-27  Glynn Foster  <glynn.foster@sun.com>

	* menu.c, panel.c: Revert Mark's reverts...Yay, commit war!

	s/g_signal_connect_object/g_signal_connect/swapped
	s/g_signal_disconnect_by_func/g_signal_handlers_disconnect_by_func

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* menu-fentry.c: (fr_fill_dir), (fr_read_dir): #ifdef out
	  debugging messages.

	* quick-desktop-reader.c: (quick_desktop_item_load_uri): ditto.

	* menu.c: (fake_mapped_fake), (show_item_menu),
	(create_menu_at_fr): revert g_signal_connect_object changes
	back to gtk_signal_connect_object. Giving out warnings and not
	sure how to fix it.
	Use g_signal_handlers_disconnect_matched instead of
	g_signal_disconnect_by_func which doesn't exist.

	* panel-widget.c: (panel_widget_applet_event):
	reverse order of params in g_signal_lookup calls.

	* panel.c: (basep_pos_connect_signals): revert
	 g_signal_connect_object changes back to 
	 gtk_signal_connect_object. Giving out warnings and not sure
	 how to fix it.

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: cleanup libpanel-applet-2 building. Add
	  GNOME_Panel_TestApplet.server.in to EXTRA_DIST.
	
	* doc/reference/Makefile.am:
	* doc/reference/panel-applet-docs.sgml:
	* doc/reference/panel-applet-sections.txt:
	* doc/reference/panel-applet.types:
	* doc/reference/tmpl/panel-applet-unused.sgml: