@@ -1,3 +1,9 @@
+2001-11-27  Mark McLoughlin  <mark@skynet.ie>
+
+	* launcher.c: include quick-desktop-reader.h.
+	(create_launcher): remove duplicate, redundant call to
+	gnome_program_locate_file.
+
 Tue Nov 27 00:42:05 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, menu-rh.[ch], distribution.[ch]: whack the redhat
